--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -3,8 +3,8 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="google-site-verification" content="A2boZBNCfcqtaHUFrJL26DHYNaKN9efyXijRxZmNVCk"/>
 <meta name="yandex-verification" content="c284690800bdd189" />
-<title>K-comment - сервис избранных товаров insales</title>
-<meta name="description" content="Избранные товары insales. K-comment - это сервис для Вашего магазина на insales, который позволит Вашим постоянным клиентам откладывать товары для последующего изучения и покупки."/>
+<title>K-comment - это дополнительное приложение для CMS InSales</title>
+<meta name="description" content="K-comment - это дополнительное приложение для CMS InSales. Избранные товары, Собщить о поступлении, Сообщения"/>
 <%= favicon_link_tag asset_path("favicon.png") %>
 <%= stylesheet_link_tag "application", media: "all" %>
 <%= javascript_include_tag "application"%>
