--- a/app/views/home/message.html.erb
+++ b/app/views/home/message.html.erb
@@ -43,7 +43,7 @@
             <div class="card text-center ml-0 mr-0">
             <div class="card-header text-white bg-success">Стандарт</div>
                 <div class="card-body">
-                <h4 class="card-title">400 руб/мес</h4>
+                <h4 class="card-title">400 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">консультации</li>
                     <li class="list-group-item">оплата за 1 мес</li>
@@ -60,7 +60,7 @@
             <div class="card text-center ml-0 mr-0">
             <div class="card-header">Стандарт 6</div>
                 <div class="card-body">
-                <h4 class="card-title">360 руб/мес</h4>
+                <h4 class="card-title">360 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">скидка 10%</li>
                     <li class="list-group-item">оплата за 6 мес</li>
@@ -77,7 +77,7 @@
             <div class="card text-center ml-0 mr-0">
             <div class="card-header text-white bg-danger">Стандарт 12</div>
                 <div class="card-body">
-                <h4 class="card-title">320 руб/мес</h4>
+                <h4 class="card-title">320 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">скидка 20%</li>
                     <li class="list-group-item">оплата за 12 мес</li>
