--- a/app/views/templates/_preview.html.erb
+++ b/app/views/templates/_preview.html.erb
@@ -1,13 +1,16 @@
-<%order_drop = InsalesOrderDrop.new(@order)%>
+<% subject_template = Liquid::Template.parse(@template.subject) %>
+<% content_template = Liquid::Template.parse(@template.content) %>
+
+<% order_drop = InsalesOrderDrop.new(@order) %>
+<% client_drop = InsalesClientDrop.new(@client) %>
+
 <div class="row mx-auto">
     <pre>
     <code>
-    <% subject_template = Liquid::Template.parse(@template.subject) %>
-    <div><span class="h6">Тема письма:</span> <%= subject_template.render('order' => order_drop)%></div>
+    <div><span class="h6">Тема письма:</span> <%= subject_template.render('order' => order_drop, 'client' => client_drop)%></div>
     
-    <% content_template = Liquid::Template.parse(@template.content) %>
     <div class="h6">Содержание письма:</div> 
-    <div><%= content_template.render('order' => order_drop).html_safe%></div>
+    <div><%= content_template.render('order' => order_drop, 'client' => client_drop).html_safe%></div>
     </code>
     </pre>
 </div>
