--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -1,5 +1,2 @@
-<h2>Создать</h2>
+<%= render 'form', product: @template, page_title: "Новый шаблон" %>
 
-<%= render 'form', template: @template %>
-
-<%# link_to 'Back', clients_path %>
