--- a/lib/templates/erb/scaffold/edit.html.erb
+++ b/lib/templates/erb/scaffold/edit.html.erb
@@ -1,6 +1,1 @@
-<h2>Editing <%= singular_table_name.titleize %></h2>
-
-<%%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %> %>
-
-<%%# link_to 'Show', @client %>
-<%%# link_to 'Back', clients_path %>
+<%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %>, page_title: "Editing <%= singular_table_name.titleize %>" %>
