--- a/lib/templates/erb/scaffold/new.html.erb
+++ b/lib/templates/erb/scaffold/new.html.erb
@@ -1,5 +1,4 @@
-<h2>New <%= singular_table_name.titleize %></h2>
 
-<%%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %> %>
+<%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %>, page_title: "New <%= singular_table_name.titleize %>" %>
 
-<%%# link_to 'Back', clients_path %>
+
