add preoder home page

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -22,6 +22,7 @@
       <li><a class="dropdown-item" href="/favorite">Избранные товары</a></li>
       <li><a class="dropdown-item" href="/restock">Собщить о поступлении</a></li>
       <li><a class="dropdown-item" href="/message">Сообщения</a></li>
+      <li><a class="dropdown-item" href="/preoder">Предзаказ</a></li>
     </ul>
   </li>
     <li class="p-2 nav-item">
