--- a/app/views/home/preoder.html.erb
+++ b/app/views/home/preoder.html.erb
@@ -2,20 +2,14 @@
 <%= render partial: "/home/header"%>
 </div>
 <div class="container mb-5">
-<h1 class="display-4 text-center text-uppercase mt-5 mb-5">Сервис Сообщения</h1>
+<h1 class="display-4 text-center text-uppercase mt-5 mb-5">Сервис Предзаказ</h1>
 <section class="page-section pt-0">
 <div class="row">
     <div class="display-6 text-center text-uppercase mb-5">Основные возможности</div>
     <ol class="list-group list-group-numbered">
-  <li class="list-group-item">уведомлений клиентов и менеджеров интернет-магазина о событиях, происходящих с заказами в зависимости от статуса заказа или оплаты, включая пользовательские статусы.</li>
-  <li class="list-group-item">возможность настроить и использовать доменную почту, например info@store.ru Есть настройки для yandex, mail, gmail, masterhost и др.</li>
-  <li class="list-group-item">отложенная отправка через несколько минут, часов, дней</li>
-  <li class="list-group-item">индивидуальные шаблоны сообщений для разных событий как для клиента, так и для менеджера магазина. (планируется добавить к статусам и способы доставки)</li>
-  <li class="list-group-item">использование языка Liquid для сообщений, как в шаблонах InSales. 
-  С помощью языка Liquid можно подставлять любую информацию, доступную в заказе, включая телефон клиента, сумму заказа, E-mail клиента, купленные позиции и т.д. 
-  С помощью условий в Liquid вы можете реализовать адаптивные сообщения, которые показывают или скрывают информацию в зависимости от переменных заказа</li>
-  <li class="list-group-item">разные каналы оповещения клиента: email, sms (в разработке), telegramm (в разработке), whatsapp (в разработке) </li>
-  <li class="list-group-item">периодическая отправка сообщений (в разработке) </li>
+  <li class="list-group-item">собираем заявки клиентов с формы предзаказа товара с учетом его варианта</li>
+  <li class="list-group-item">создание заказа из заявки с комментарием в заказе</li>
+  <li class="list-group-item">возможность настроить и использовать доменную почту, например info@store.ru (есть настройки для yandex, mail, gmail, masterhost и др.)</li>
 </ol>
 </div>
 </section>
