change favorite home page

--- a/app/views/home/favorite.html.erb
+++ b/app/views/home/favorite.html.erb
@@ -4,59 +4,133 @@
 <div class="container mb-5">
 <h1 class="display-4 text-center text-uppercase mt-5 mb-5">Сервис Избранное</h1>
 <section class="page-section price pt-0">
-<div class="row">
-    <div class="display-6 text-center text-uppercase mb-5">Основные возможности</div>
-    <div class="col-xs-12 col-sm-6 col-md-3">
-    <div class="card ml-0 mr-0">
-        <div class="view overlay">
-        <%= image_tag "/benefit1.jpg", data: { src: "/benefit1.jpg"}, class: "card-img-top" %>
-        <div class="mask rgba-white-slight"></div>
-        </div>
-        <div class="card-body">
-        <h4 class="card-title">Больше удобств клиенту</h4>
-        <p class="card-text">"Избранные товары" доступны клиенту как в мобильной , так и в полной версии сайта. Ваш клиент всегда может отправить себе на email отобранные товары.</p>
-        </div>
-    </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-3">
-    <div class="card ml-0 mr-0">
-        <div class="view overlay">
-        <%= image_tag "/benefit3.jpg", data: { src: "/benefit3.jpg"}, class: "card-img-top" %>
-        <div class="mask rgba-white-slight"></div>
-        </div>
-        <div class="card-body">
-        <h4 class="card-title">Отчеты об отобранных товарах</h4>
-        <p class="card-text">Вы можете просматривать список отобранных товаров по клиентам отдельно или экспортировать весь список в CSV для дальнейшего анализа.</p>
-        </div>
-    </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-3">
-    <div class="card ml-0 mr-0">
-        <div class="view overlay">
-        <%= image_tag "/benefit2.jpg", data: { src: "/benefit2.jpg"}, class: "card-img-top" %>
-        <div class="mask rgba-white-slight"></div>
-        </div>
-        <div class="card-body">
-        <h4 class="card-title">Полностью изменяемый вид</h4>
-        <p class="card-text">Обладая базовыми знаниями в CSS вы можете полностью изменить дизайн кнопок и страницы "Избранные товары" под Ваш стиль магазина.</p>
-        </div>
-    </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-3">
-    <div class="card ml-0 mr-0">
-        <div class="view overlay">
-        <%= image_tag "/benefit4.jpg", data: { src: "/benefit4.jpg"}, class: "card-img-top" %>
-        <div class="mask rgba-white-slight"></div>
-        </div>
-        <div class="card-body">
-        <h4 class="card-title">Состав избранного на email</h4>
-        <p class="card-text">Ваши клиенты могут отправлять список товаров на свой контактный email со страницы "Избранные товары".</p>
-        <p></p>
-        </div>
-    </div>
-    </div>
-</div>
+  <div class="row">
+      <div class="display-6 text-center text-uppercase mb-5">Основные возможности</div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="card ml-0 mr-0">
+          <div class="view overlay">
+          <%= image_tag "/benefit1.jpg", data: { src: "/benefit1.jpg"}, class: "card-img-top" %>
+          <div class="mask rgba-white-slight"></div>
+          </div>
+          <div class="card-body">
+          <h4 class="card-title">Больше удобств клиенту</h4>
+          <p class="card-text">"Избранные товары" доступны клиенту как в мобильной , так и в полной версии сайта. Ваш клиент всегда может отправить себе на email отобранные товары.</p>
+          </div>
+      </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="card ml-0 mr-0">
+          <div class="view overlay">
+          <%= image_tag "/benefit3.jpg", data: { src: "/benefit3.jpg"}, class: "card-img-top" %>
+          <div class="mask rgba-white-slight"></div>
+          </div>
+          <div class="card-body">
+          <h4 class="card-title">Отчеты об отобранных товарах</h4>
+          <p class="card-text">Вы можете просматривать список отобранных товаров по клиентам отдельно или экспортировать весь список в CSV для дальнейшего анализа.</p>
+          </div>
+      </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="card ml-0 mr-0">
+          <div class="view overlay">
+          <%= image_tag "/benefit2.jpg", data: { src: "/benefit2.jpg"}, class: "card-img-top" %>
+          <div class="mask rgba-white-slight"></div>
+          </div>
+          <div class="card-body">
+          <h4 class="card-title">Полностью изменяемый вид</h4>
+          <p class="card-text">Обладая базовыми знаниями в CSS вы можете полностью изменить дизайн кнопок и страницы "Избранные товары" под Ваш стиль магазина.</p>
+          </div>
+      </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="card ml-0 mr-0">
+          <div class="view overlay">
+          <%= image_tag "/benefit4.jpg", data: { src: "/benefit4.jpg"}, class: "card-img-top" %>
+          <div class="mask rgba-white-slight"></div>
+          </div>
+          <div class="card-body">
+          <h4 class="card-title">Состав избранного на email</h4>
+          <p class="card-text">Ваши клиенты могут отправлять список товаров на свой контактный email со страницы "Избранные товары".</p>
+          <p></p>
+          </div>
+      </div>
+      </div>
+  </div>
 </section>
+<section class="page-section price pt-0">
+    <div class="row justi">
+        <div class="display-6 text-center text-uppercase mb-5">Стоимость</div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="card text-center ml-0 mr-0">
+            <div class="card-header">Начальный</div>
+                <div class="card-body">
+                <h4 class="card-title ">БЕСПЛАТНО</h4>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">до 300 клиентов</li>
+                    <li class="list-group-item">настройка</li>
+                    <li class="list-group-item">полный функционал</li>
+                </ul>
+                </div>
+                <div class="card-body">
+                    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
+                    <a href="https://www.insales.ru/collection/dopolneniya-k-shablonam/product/k-comment?aff=8337582b0" target="_blank" class='text-center btn btn-outline-success btn-lg'>Insales</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="card text-center ml-0 mr-0">
+            <div class="card-header text-white bg-success">Стандарт</div>
+                <div class="card-body">
+                <h4 class="card-title">300 ₽/мес</h4>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">от 300 до 1000 клиентов</li>
+                    <li class="list-group-item">настройка</li>
+                    <li class="list-group-item">полный функционал</li>
+                </ul>
+                </div>
+                <div class="card-body">
+                <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
+                <a href="https://www.insales.ru/collection/dopolneniya-k-shablonam/product/k-comment?aff=8337582b0" target="_blank" class='text-center btn btn-outline-success btn-lg'>Insales</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="card text-center ml-0 mr-0">
+            <div class="card-header">Макси</div>
+                <div class="card-body">
+                <h4 class="card-title">600 ₽/мес</h4>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">более 1000 клиентов</li>
+                    <li class="list-group-item">настройка</li>
+                    <li class="list-group-item">полный функционал</li>
+                </ul>
+                </div>
+                <div class="card-body">
+                    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
+                    <a href="https://www.insales.ru/collection/dopolneniya-k-shablonam/product/k-comment?aff=8337582b0" target="_blank" class='text-center btn btn-outline-success btn-lg'>Insales</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="card text-center ml-0 mr-0">
+            <div class="card-header text-white bg-danger">Макси SALE</div>
+                <div class="card-body">
+                <h4 class="card-title">540 ₽/мес</h4>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">скидка 10% (6480 ₽)</li>
+                    <li class="list-group-item">оплата за 12 мес</li>
+                    <li class="list-group-item">полный функционал</li>
+                </ul>
+                </div>
+                <div class="card-body">
+                    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
+                    <a href="https://www.insales.ru/collection/dopolneniya-k-shablonam/product/k-comment?aff=8337582b0" target="_blank" class='text-center btn btn-outline-success btn-lg'>Insales</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section class="page-section price pt-0">
   <div class="container">
     <div class="display-5 text-center text-uppercase mb-5">Дополнительные услуги</div>
