--- a/app/views/insints/checkint.js.erb
+++ b/app/views/insints/checkint.js.erb
@@ -1,2 +1,2 @@
-$("#main-content").prepend('<%= j render partial: "/layouts/messages" %>');
+$("#main-content").prepend('<%= j render partial: "/layouts/_notice_messages" %>');
 $(".alert").delay(4000).slideUp(200, function() { $(this).alert('close'); });
